- support multiple core - performance improvement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(replicator)
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 include_directories( include )
 include_directories( src )
-set(MY_CMAKE_WARNING_FLAG  " -Wall -Wextra -Wno-unused-parameter")
+set(MY_CMAKE_WARNING_FLAG  " -g3 -Wall -Wextra -Wno-unused-parameter -fsanitize=address -fno-omit-frame-pointer")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  ${MY_CMAKE_WARNING_FLAG}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  ${MY_CMAKE_WARNING_FLAG}")
 
