--- a/src/lcrepl/CMakeLists.txt
+++ b/src/lcrepl/CMakeLists.txt
@@ -1,9 +1,13 @@
     SET(lcrepl_STAT_SRCS
+    usockdata.cpp
+    usockconn.cpp
+    usockmcd.cpp
+    usocklistener.cpp
+    fdpasslstnr.cpp
     lcreplsender.cpp
     lcreplreceiver.cpp
     lcreplgroup.cpp
     replshmhelper.cpp
-    lcshmevent.cpp
     lcnodeinfo.cpp
     lcreplconf.cpp
     config.cpp
