--- a/src/lcrepl/Makefile.am
+++ b/src/lcrepl/Makefile.am
@@ -6,7 +6,8 @@ INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src
 liblcrepl_a_METASOURCES = AUTO
 
 liblcrepl_a_SOURCES = config.cpp lcreplconf.cpp lcreplreceiver.cpp \
-	lcshmevent.cpp replshmhelper.cpp lcnodeinfo.cpp lcreplgroup.cpp lcreplsender.cpp \
-	replicableshmtid.cpp  replshmtidcontainer.cpp
+	replshmhelper.cpp lcnodeinfo.cpp lcreplgroup.cpp lcreplsender.cpp \
+	replicableshmtid.cpp replshmtidcontainer.cpp fdpasslstnr.cpp \
+	usockconn.cpp usockdata.cpp usockmcd.cpp usocklistener.cpp 
 
 ####### kdevelop will overwrite this part!!! (end)############
