--- a/src/lcrepl/Makefile.in
+++ b/src/lcrepl/Makefile.in
@@ -85,9 +85,7 @@ ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/acinclude.m4 \
 	$(top_srcdir)/ax_check_zlib.m4 \
 	$(top_srcdir)/ax_check_openssl.m4 \
-	$(top_srcdir)/ax_path_lib_pcre.m4 \
-	$(top_srcdir)/ax_lib_expat.m4 $(top_srcdir)/ax_check_sasl.m4 \
-	$(top_srcdir)/configure.ac
+	$(top_srcdir)/ax_check_sasl.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
@@ -103,10 +101,12 @@ am__v_AR_1 =
 liblcrepl_a_AR = $(AR) $(ARFLAGS)
 liblcrepl_a_LIBADD =
 am_liblcrepl_a_OBJECTS = config.$(OBJEXT) lcreplconf.$(OBJEXT) \
-	lcreplreceiver.$(OBJEXT) lcshmevent.$(OBJEXT) \
-	replshmhelper.$(OBJEXT) lcnodeinfo.$(OBJEXT) \
-	lcreplgroup.$(OBJEXT) lcreplsender.$(OBJEXT) \
-	replicableshmtid.$(OBJEXT) replshmtidcontainer.$(OBJEXT)
+	lcreplreceiver.$(OBJEXT) replshmhelper.$(OBJEXT) \
+	lcnodeinfo.$(OBJEXT) lcreplgroup.$(OBJEXT) \
+	lcreplsender.$(OBJEXT) replicableshmtid.$(OBJEXT) \
+	replshmtidcontainer.$(OBJEXT) fdpasslstnr.$(OBJEXT) \
+	usockconn.$(OBJEXT) usockdata.$(OBJEXT) usockmcd.$(OBJEXT) \
+	usocklistener.$(OBJEXT)
 liblcrepl_a_OBJECTS = $(am_liblcrepl_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -202,9 +202,6 @@ ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
-EXPAT_CFLAGS = @EXPAT_CFLAGS@
-EXPAT_LIBS = @EXPAT_LIBS@
-EXPAT_VERSION = @EXPAT_VERSION@
 FGREP = @FGREP@
 GREP = @GREP@
 INSTALL = @INSTALL@
@@ -242,9 +239,6 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
-PCRE_CFLAGS = @PCRE_CFLAGS@
-PCRE_LDFLAGS = @PCRE_LDFLAGS@
-PCRE_LIBS = @PCRE_LIBS@
 RANLIB = @RANLIB@
 RT_LIB_OPTION = @RT_LIB_OPTION@
 SED = @SED@
@@ -311,8 +305,9 @@ noinst_LIBRARIES = liblcrepl.a
 INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src
 liblcrepl_a_METASOURCES = AUTO
 liblcrepl_a_SOURCES = config.cpp lcreplconf.cpp lcreplreceiver.cpp \
-	lcshmevent.cpp replshmhelper.cpp lcnodeinfo.cpp lcreplgroup.cpp lcreplsender.cpp \
-	replicableshmtid.cpp  replshmtidcontainer.cpp
+	replshmhelper.cpp lcnodeinfo.cpp lcreplgroup.cpp lcreplsender.cpp \
+	replicableshmtid.cpp replshmtidcontainer.cpp fdpasslstnr.cpp \
+	usockconn.cpp usockdata.cpp usockmcd.cpp usocklistener.cpp 
 
 all: all-am
 
@@ -364,15 +359,19 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fdpasslstnr.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lcnodeinfo.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lcreplconf.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lcreplgroup.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lcreplreceiver.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lcreplsender.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lcshmevent.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/replicableshmtid.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/replshmhelper.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/replshmtidcontainer.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/usockconn.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/usockdata.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/usocklistener.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/usockmcd.Po@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
