--- a/src/memcache/Makefile.in
+++ b/src/memcache/Makefile.in
@@ -85,9 +85,7 @@ ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/acinclude.m4 \
 	$(top_srcdir)/ax_check_zlib.m4 \
 	$(top_srcdir)/ax_check_openssl.m4 \
-	$(top_srcdir)/ax_path_lib_pcre.m4 \
-	$(top_srcdir)/ax_lib_expat.m4 $(top_srcdir)/ax_check_sasl.m4 \
-	$(top_srcdir)/configure.ac
+	$(top_srcdir)/ax_check_sasl.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
@@ -103,8 +101,8 @@ am__v_AR_1 =
 liblsmemcache_a_AR = $(AR) $(ARFLAGS)
 liblsmemcache_a_LIBADD =
 am_liblsmemcache_a_OBJECTS = lsmchashmulti.$(OBJEXT) \
-	lsmcsasl.$(OBJEXT) lsmemcache.$(OBJEXT) rolememcache.$(OBJEXT) \
-	memcacheconn.$(OBJEXT) memcachelistener.$(OBJEXT)
+	lsmcsasl.$(OBJEXT) lsmemcache.$(OBJEXT) memcacheconn.$(OBJEXT) \
+	memcachelistener.$(OBJEXT)
 liblsmemcache_a_OBJECTS = $(am_liblsmemcache_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -200,9 +198,6 @@ ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
-EXPAT_CFLAGS = @EXPAT_CFLAGS@
-EXPAT_LIBS = @EXPAT_LIBS@
-EXPAT_VERSION = @EXPAT_VERSION@
 FGREP = @FGREP@
 GREP = @GREP@
 INSTALL = @INSTALL@
@@ -240,9 +235,6 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
-PCRE_CFLAGS = @PCRE_CFLAGS@
-PCRE_LDFLAGS = @PCRE_LDFLAGS@
-PCRE_LIBS = @PCRE_LIBS@
 RANLIB = @RANLIB@
 RT_LIB_OPTION = @RT_LIB_OPTION@
 SED = @SED@
@@ -309,7 +301,7 @@ noinst_LIBRARIES = liblsmemcache.a
 INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src
 liblsmemcache_a_METASOURCES = AUTO
 liblsmemcache_a_SOURCES = lsmchashmulti.cpp lsmcsasl.cpp lsmemcache.cpp \
-    rolememcache.cpp memcacheconn.cpp memcachelistener.cpp
+    memcacheconn.cpp memcachelistener.cpp
 
 all: all-am
 
@@ -365,7 +357,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lsmemcache.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/memcacheconn.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/memcachelistener.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rolememcache.Po@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
